--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.12",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
