--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
-    "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.16.2",
+    "@emotion/react": "^11.11.4",
+    "@heroicons/react": "^2.1.4",
+    "@hookform/resolvers": "^3.6.0",
+    "@langchain/openai": "^0.2.1",
+    "@prisma/client": "^5.15.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -22,6 +24,8 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -31,27 +35,27 @@
     "react": "^18",
     "react-awesome-reveal": "^4.2.12",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
-    "react-spinners": "^0.14.1",
-    "tailwind-merge": "^2.4.0",
+    "react-spinners": "^0.13.8",
+    "resend": "^3.3.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.10",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "jest": "^29.7.0",
-    "jest-junit": "^16.0.0",
     "postcss": "^8",
-    "prisma": "^5.16.2",
+    "prisma": "^5.15.1",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.1.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5"
   }
 }
