--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --testResultsProcessor=jest-junit"
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
@@ -15,7 +14,7 @@
     "@heroicons/react": "^2.1.4",
     "@hookform/resolvers": "^3.6.0",
     "@langchain/openai": "^0.2.1",
-    "@prisma/client": "^5.15.1",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -24,8 +23,8 @@
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@testing-library/dom": "^10.3.1",
     "@tremor/react": "^3.17.4",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -33,7 +32,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "enzyme": "^3.11.0",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
@@ -49,61 +47,18 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.24.7",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/enzyme": "^3.10.18",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20",
+    "@types/node": "^20.14.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-junit": "^16.0.0",
     "postcss": "^8",
-    "prisma": "^5.15.1",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.2.2",
-    "typescript": "^5.5.3"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "json"
-    ],
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/$1",
-      "^next-auth$": "<rootDir>/__mocks__/next-auth.ts"
-    },
-    "transform": {
-      "^.+\\.tsx?$": [
-        "ts-jest",
-        {
-          "tsconfig": "tsconfig.json"
-        }
-      ]
-    },
-    "reporters": [
-      "default",
-      [
-        "jest-junit",
-        {
-          "outputDirectory": "./reports/junit"
-        }
-      ]
-    ],
-    "watchPathIgnorePatterns": [
-      "<rootDir>/.next/"
-    ]
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
